--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,12 @@
     .container {
     }
     .down {
+      clear: left;
       color: red;
     }
     .up {
+      margin-top: 20px;
+      clear: left;
       color: green;
     }
     h4 {
