--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
       color: red;
     }
     .up {
-      margin-top: 20px;
+      padding-top: 20px;
       clear: left;
       color: green;
     }
